--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@
     box-shadow: 0 0 2px white;
     color: #fff;
     font-size: small;
-
+    padding: 10px 10px;
     user-select: none;
     text-transform: uppercase;
     font-weight: bolder;
@@ -133,6 +133,7 @@
         grid-template-rows: 1fr 20%;
     }
     .imageDisplay {
+        display: flex;
         
         width: 94%;
     }
@@ -167,6 +168,6 @@
         height: 20%;
     }
     .alphabet {
-        padding: 12px 10px;
+        /* padding: 12px 10px; */
     }
 }
