--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 70%;
+    height: 60%;
     flex-grow: 12;
     padding-top: 10px;
 }
@@ -76,25 +76,29 @@
     gap: 6px;
 
 }
+.bottom {
+    height: 40%;
+}
 .keyboard {
-    background-color: rgba(7, 10, 12, 0.699);
+    background-color: rgba(7, 10, 12, 0.315);
 
-    width: 100vw;
-    height: 30%;
     flex-grow: 1;
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     gap: 7px;
     padding: 10px;
+    margin: 1rem;
+    border-radius: 10px;
+
 }
 .alphabet {
     border: none;
     border-radius: 5px;
-    background-color: rgba(13, 13, 14, 0.473);
+    background-color: rgba(12, 12, 14, 0.253);
     box-shadow: 0 0 2px white;
     color: #fff;
     font-size: small;
-    padding: 10px 10px;
+    padding: 8px 5px;
     user-select: none;
     text-transform: uppercase;
     font-weight: bolder;
@@ -140,7 +144,11 @@
     .main {
         height: 100svh;
     }
-    
+    .bottom {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
 @media (width <= 768px) AND ( width > 480px) {
     .main {
