--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     transition: 500ms;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .main {
@@ -51,7 +52,8 @@
 }
 .guess-tile {
     height: 60px;
-    min-width: 60px;
+    width: 60px;
+    font-weight: bold;
     width: guessDisplayWidth / 5;
     /* background: linear-gradient(0deg, rgba(0, 128, 0, 0.801), rgba(76, 0, 130, 0.329),#fff,rgba(255, 255, 0, 0.322),#fff, rgba(255, 0, 0, 0.866)); */
     backdrop-filter: blur(4px);
@@ -69,19 +71,41 @@
 
 }
 .guessDisplay {
-    /* background-color: rgb(252, 250, 250); */
+    background-color: rgb(252, 250, 250);
     min-width: 25%;
+    max-width: 90%;
     /* flex-grow: 1; */
     display: flex;
-    gap: 6px;
+    align-items: center;
+    gap: 2px;
+    border-radius: 10px 10px 0 0;
+    overflow: hidden;
+}
+.answerDisplay {
+    justify-content: space-evenly;
+    height: 12em;
+    display: flex;
+    flex-direction: column;
 
+}
+.answerDisplay legend {
+    font-size: 1rem;
+    text-transform: uppercase;
+}
+.showAnswer {
+    text-transform: uppercase;
+    padding-top: 2rem;
+}
+.answerDisplay .slug {
+    font-size: 0.8rem;
 }
 .bottom {
     height: 40%;
+    display: flex;
+    align-items: center;
 }
 .keyboard {
-    background-color: rgba(7, 10, 12, 0.315);
-
+    background-color: rgba(0, 0, 0, 0.534);
     flex-grow: 1;
     display: grid;
     grid-template-columns: repeat(10, 1fr);
@@ -97,8 +121,8 @@
     background-color: rgba(12, 12, 14, 0.253);
     box-shadow: 0 0 2px white;
     color: #fff;
+    padding: 10px 0;
     font-size: small;
-    padding: 8px 5px;
     user-select: none;
     text-transform: uppercase;
     font-weight: bolder;
@@ -120,15 +144,18 @@
     font-size: 2rem;
     color: #fff;
     width: 100%;
-    height: 100%;
     text-align: center;
 
 }
 .wrong {
     background-color: hsla(0, 100%, 50%, 0.623);
+    color: #fff;
+    font-weight: 900;
 }
 .correct {
+    color: #fff;
     background-color: green;
+    font-weight: 900;
 }
 
 /* Responsiveness */
@@ -138,7 +165,7 @@
     }
     .imageDisplay {
         display: flex;
-        
+        padding: 2rem;
         width: 94%;
     }
     .main {
@@ -148,6 +175,11 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        height: 30%;
+    }
+    .keyboard {
+        height: 40%;
+        gap: 10px;
     }
 }
 @media (width <= 768px) AND ( width > 480px) {
@@ -172,10 +204,21 @@
         width: 90%;
         
     }
+    .guessDisplay {
+        max-width: 90%;
+        
+
+    }
+    .guess-tile {
+        height: 40px;
+        width: 30px;
+        padding: 3px 0;
+    }
     .bottom {
         height: 20%;
     }
     .alphabet {
-        /* padding: 12px 10px; */
+        padding: 6px;
+        font-size: x-small;
     }
 }
