--- a/style.css
+++ b/style.css
@@ -202,6 +202,7 @@
 @media (width <= 480px) {
     .imageDisplay {
         width: 90%;
+        min-width: 90vw;
         
     }
     .guessDisplay {
